--- a/src/client/css/main.scss
+++ b/src/client/css/main.scss
@@ -1,6 +1,9 @@
 /* SASS declarations go here */
 
+@import "bootstrap/variables";
+
 @import "avatar";
+@import "incident-list";
 @import "map";
 
 
