--- a/src/client/css/_map.scss
+++ b/src/client/css/_map.scss
@@ -1,6 +1,8 @@
 .map {
-  min-width: 97%;
-  min-height: 700px;
+  height: 0;
+  padding-top: 25px;
+  padding-bottom: 56.25%; /* 16:9 */
+  position: relative;
 }
 
 .map-incident {
