--- a/src/client/css/_map.scss
+++ b/src/client/css/_map.scss
@@ -1,6 +1,6 @@
 .map {
   height: 0;
-  padding-top: 25px;
+  margin: $padding-large-vertical;
   padding-bottom: 56.25%; /* 16:9 */
   position: relative;
 }
